--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ EMAIL_PORT=587
 EMAIL_USE_TLS=True
 EMAIL_HOST_USER=aneemess111@gmail.com
 EMAIL_HOST_PASSWORD=abc
+ADMIN_EMAIL=aneemes1@gmail.com
 DB_ENGINE=django.db.backends.postgresql
 DB_NAME=dripshop
 DB_USER=postgres
